chore(api): updated url

--- a/www/views/partials/add-address.html
+++ b/www/views/partials/add-address.html
@@ -12,7 +12,11 @@
       </label>
 
       <label class="item item-input">
-        <input type="text" reset-field required ng-model="newAddress.street1" placeholder="Street">
+        <input type="text" reset-field required ng-model="newAddress.street1" placeholder="Address Line 1">
+      </label>
+
+      <label class="item item-input">
+        <input type="text" reset-field required ng-model="newAddress.street2" placeholder="Address Line 2">
       </label>
 
       <label class="item item-input">
