--- a/www/views/partials/add-feedback.html
+++ b/www/views/partials/add-feedback.html
@@ -2,7 +2,7 @@
 
   <ion-header-bar>
     <h1 class="title">Your Earlybird</h1>
-    <button class="button button-clear" on-touch="createFeedback(feedback)">Post</button>
+    <button class="button button-clear" on-touch="createFeedback(feedback)">Done</button>
   </ion-header-bar>
 
   <ion-content>
