fix(address) don't require street2

--- a/www/views/partials/add-address.html
+++ b/www/views/partials/add-address.html
@@ -16,7 +16,7 @@
       </label>
 
       <label class="item item-input">
-        <input type="text" reset-field required ng-model="newAddress.street2" placeholder="Address Line 2">
+        <input type="text" reset-field ng-model="newAddress.street2" placeholder="Address Line 2">
       </label>
 
       <label class="item item-input">
