feat(feedback): changed header

--- a/www/views/partials/add-feedback.html
+++ b/www/views/partials/add-feedback.html
@@ -1,7 +1,7 @@
 <ion-modal-view>
 
   <ion-header-bar>
-    <h1 class="title">Your Earlybird</h1>
+    <h1 class="title">Your Order</h1>
     <button class="button button-clear" on-touch="createFeedback(feedback)">Done</button>
   </ion-header-bar>
 
