fix(forms): prevent form submission if form invalid

--- a/www/views/partials/add-address.html
+++ b/www/views/partials/add-address.html
@@ -6,7 +6,7 @@
   </ion-header-bar>
 
   <ion-content>
-    <form name="newAddress.form" class="list">
+    <form name="newAddress.form" class="list" on-submit="createAddress(newAddress)">
       <label class="item item-input">
         <input type="text"
                reset-field
