fix(card): added newCard form to scope

--- a/www/views/partials/add-card.html
+++ b/www/views/partials/add-card.html
@@ -1,4 +1,4 @@
-<ion-modal-view ng-init="newCard={}">
+<ion-modal-view>
   <ion-header-bar>
     <button class="button button-clear" on-touch="cardModal.hide()">Cancel</button>
     <h1 class="title">Add Payment</h1>
