feat(splash): hold for 3 sec to make sure data has resolved

--- a/www/views/order.html
+++ b/www/views/order.html
@@ -1,4 +1,4 @@
-<div class="order">
+<div ng-cloak class="order">
   <ion-header-bar class="bar-assertive">
     <button ui-sref="earlybird.settings"
             nav-direction="back"
