feat(password): don't autocomplete or autocorrect

--- a/www/views/login.html
+++ b/www/views/login.html
@@ -11,7 +11,7 @@
         <input type="email" required reset-field ng-model="loginForm.params.email" placeholder="Email">
       </label>
       <label class="item item-fixed item-input">
-        <input type="password" required reset-field ng-model="loginForm.params.password" placeholder="Password">
+        <input autocomplete="off" autocorrect="off" type="password" required reset-field ng-model="loginForm.params.password" placeholder="Password">
       </label>
     </form>
   </ion-content>
