--- a/www/views/register.html
+++ b/www/views/register.html
@@ -20,7 +20,7 @@
         <input type="tel" reset-field required ng-model="registerForm.params.phone" placeholder="Phone">
       </label>
       <label class="item item-fixed item-input">
-        <input type="password" reset-field required ng-model="registerForm.params.password" placeholder="Password">
+        <input autocomplete="off" autocorrec="off" type="password" reset-field required ng-model="registerForm.params.password" placeholder="Password">
       </label>
       <label class="item item-fixed item-input">
         <input type="text" reset-field ng-model="registerForm.params.code" placeholder="Promo code (optional)">
