--- a/www/views/order.html
+++ b/www/views/order.html
@@ -54,7 +54,7 @@
         <i class="radio-icon ion-ios-checkmark-outline button-opaque"></i>
       </label>
 
-      <div class="order-add-address item item-button-right">
+      <div class="order-add-address item item-fixed item-button-right">
         <div>
           Add Address
         </div>
