feat(api): add ability to switch to dev mode

--- a/www/views/home.html
+++ b/www/views/home.html
@@ -2,7 +2,8 @@
   <ion-content scroll="false">
 
     <div class="home-text-logo row-67">
-      <img src="img/img-logo-white.png"></img>
+      <img src="img/img-logo-white.png"
+            on-long-long-hold="switchMode()"></img>
     </div>
 
     <div class="home-text-buttons row-33">
