--- a/www/views/partials/add-address.html
+++ b/www/views/partials/add-address.html
@@ -7,13 +7,13 @@
 
   <ion-content>
     <form name="newAddress.form" class="list" on-submit="createAddress(newAddress.params)">
-      <label class="item item-fixed item-input">
-        <input type="text"
-               reset-field
-               ng-model="newAddress.params.title"
-               placeholder="Address nickname">
-      </label>
-
+      <!-- <label class="item item&#45;fixed item&#45;input"> -->
+      <!--   <input type="text" -->
+      <!--          reset&#45;field -->
+      <!--          ng&#45;model="newAddress.params.title" -->
+      <!--          placeholder="Address nickname"> -->
+      <!-- </label> -->
+      <!--  -->
       <label class="item item-fixed item-input">
         <input type="text"
                g-places-autocomplete
