--- a/www/views/card.html
+++ b/www/views/card.html
@@ -11,6 +11,9 @@
 
   <ion-content scroll="false">
     <div class="list list-inset">
+      <div class="form-description">
+        <h2>And finally, what is your preferred payment method?</h2>
+      </div>
       <ng-include src="'views/partials/card-form.html'"></ng-include>
     </div>
   </ion-content>
