--- a/www/views/register.html
+++ b/www/views/register.html
@@ -7,6 +7,10 @@
 
   <ion-content scroll="false">
     <form name="registerForm.form" class="list list-inset" on-submit="register(registerForm.params)">
+      <div class="form-description">
+        <h2>Thanks for downloading Earlybird, let's collect a few quick bits of information to get you started!</h2>
+      </div>
+
       <label focus-me class="item item-fixed item-input">
         <input type="text" reset-field required ng-model="registerForm.params.first_name" placeholder="First name">
       </label>
