chore(register): changed copy

--- a/www/views/register.html
+++ b/www/views/register.html
@@ -7,8 +7,8 @@
 
   <ion-content scroll="false">
     <form name="registerForm.form" class="list list-inset" on-submit="register(registerForm.params)">
-      <div class="form-description">
-        <h2>Thanks for downloading Earlybird, let's collect a few quick bits of information to get you started!</h2>
+      <div class="form-description hide-on-keyboard-open">
+        <h2>Welcome to Earlybird, let's get started!</h2>
       </div>
 
       <label focus-me class="item item-fixed item-input">
